--- a/index.html
+++ b/index.html
@@ -407,16 +407,20 @@
                         <fieldset>
                             <div class="category-title-right">шины
                             </div>
-                            <p><input type="checkbox">Бренд 1</p>
-                            <p><input type="checkbox">Бренд 2</p>
-                            <p><input type="checkbox">Бренд 3</p>
+                            <div class="check-brands-flex">
+                            <label><input type="checkbox">Бренд 1</label>
+                            <label><input type="checkbox">Бренд 2</label>
+                            <label><input type="checkbox">Бренд 3</label>
+                            </div>
                         </fieldset>
                         <fieldset>
                             <div class="category-title-right">диски
                             </div>
-                            <p><input type="checkbox">Бренд 1</p>
-                            <p><input type="checkbox">Бренд 2</p>
-                            <p><input type="checkbox">Бренд 3</p>
+                            <div class="check-brands-flex">
+                            <label><input type="checkbox">Бренд 1</label>
+                            <label><input type="checkbox">Бренд 2</label>
+                            <label><input type="checkbox">Бренд 3</label>
+                            </div>
                         </fieldset>
                         <input class="btn-selection" type="submit" name="submit" value="выбрать">
                     </form>
